--- a/resources/global.css
+++ b/resources/global.css
@@ -10,10 +10,42 @@ body
     color: white;
 }
 
+.productcontainer
+{
+    margin: 10px;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.boxdisplay 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    width: 350px;
+    height: 350px;
+    background-color: rgb(53, 43, 57);
+    border-radius: 10px;
+    outline:rgb(115, 93, 124) 10px;
+    cursor: pointer;
+}
+
 .productboximage 
 {
-    max-width: 300;
-    max-height: 300;
+    display: block;
+    max-width: 300px;
+    max-height: 300px;
+    width: auto;
+    height: auto;
+}
+.productboxname 
+{
+    font-size: large;
+    margin-top: 15px;
+    text-align: center;   
+    font-weight: bold; 
 }
 
 #webcontent 
@@ -67,7 +99,7 @@ body
 #footer 
 {
     background-color: blueviolet;
-    position: stick;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
