--- a/resources/global.css
+++ b/resources/global.css
@@ -10,6 +10,17 @@ body
     color: white;
 }
 
+.inline_form 
+{
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+}
+.inline_form * 
+{
+    margin: 2px;
+}
+
 a 
 {
     color: rgb(95, 0, 95);
