--- a/resources/global.css
+++ b/resources/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;500;600;700&display=swap');
 
@@ -268,4 +268,9 @@ button:hover
 {
     color: white;
     text-align: center;
+}
+
+.shiping-form
+{
+    
 }
