--- a/resources/global.css
+++ b/resources/global.css
@@ -197,7 +197,8 @@ input[type='submit']
     font-size: large;
     margin-top: 15px;
     text-align: center;   
-    font-weight: bold; 
+    font-weight: bold;
+    bottom:0;
 }
 
 #webcontent 
